deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shorturl-server
spec:
  selector:
    matchLabels:
      app: shorturl-server
  replicas: 3
  template:
    metadata:
      labels:
        app: shorturl-server
    spec:
      containers:
      - name: shorturl-server
        image: shorturl-server:20210612030125
        imagePullPolicy: Never
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        ports:
        - containerPort: 3000
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shorturl-transform
spec:
  selector:
    matchLabels:
      app: shorturl-transform
  replicas: 3
  template:
    metadata:
      labels:
        app: shorturl-transform
    spec:
      containers:
      - name: shorturl-transform
        image: shorturl-transform:20210612030053
        imagePullPolicy: Never
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 4000
          name: grpc
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shorturl-postgres
spec:
  selector:
    matchLabels:
      app: shorturl-postgres
  serviceName: shorturl-postgres-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: shorturl-postgres
    spec:
      containers:
      - name: shorturl-postgres
        image: postgres:13
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
          - containerPort: 5432
            name: tcp
        volumeMounts:
          - name: shorturl-postgres-storage
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: shorturl-postgres-storage
          persistentVolumeClaim:
            claimName: shorturl-postgres-pv-claim
