services.yml
apiVersion: v1
kind: Service
metadata:
  name: shorturl-server-svc
spec:
  selector:
    app: shorturl-server
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: shorturl-transform-svc
spec:
  selector:
    app: shorturl-transform
  ports:
  - port: 4000
    targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: shorturl-postgres-svc
spec:
  selector:
    app: shorturl-postgres
  ports:
  - port: 5432
    targetPort: 5432
