ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shorturl-ingress
spec:
  rules:
  - host: shorturl.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: shorturl-server-svc
            port: 
              number: 3000
